youfull/objects/Notification_Queue__c.object
<CustomObject>
    <description>Holds SMS &amp; Email messages that are pending to be sent.  Once a message is successfully sent out by NotificationManager, the corresponding queue record is deleted.</description>
    <fields>
        <fullName>Context_Record_Id__c</fullName>
        <description>Record to which the email or SMS belong to</description>
        <inlineHelpText>Record to which the email or SMS belong to</inlineHelpText>
        <label>Context Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Context_Record_Name__c</fullName>
        <description>Record to which the email or SMS belong to</description>
        <inlineHelpText>Record to which the email or SMS belong to</inlineHelpText>
        <label>Context Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailTemplateName__c</fullName>
        <description>Refers to EmailTemplate.Name which is used to send out SMS or Email message.</description>
        <inlineHelpText>Refers to EmailTemplate.Name which is used to send out SMS or Email message.</inlineHelpText>
        <label>Email Template Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Body__c</fullName>
        <label>Email Template Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Captures error message that may occur during notification. This will be used for manual troubleshooting.</description>
        <inlineHelpText>Captures error message that may occur during notification. This will be used for manual troubleshooting.</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Reattempt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Identifies how many times a notification has been reattempted in case of errors.</description>
        <inlineHelpText>Identifies how many times a notification has been reattempted in case of errors.</inlineHelpText>
        <label>Error Reattempt</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Email__c</fullName>
        <description>From email address for email messaging</description>
        <inlineHelpText>From email address for email messaging</inlineHelpText>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <description>An auto generated Id which is unique for a particular transaction used to group all the notifications that participate</description>
        <inlineHelpText>An auto generated Id which is unique for a particular transaction used to group all the notifications that participate</inlineHelpText>
        <label>Group Id</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCriticalError__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if the error is critical or not. Only non critical errors will be auto reattempted.</description>
        <inlineHelpText>Identifies if the error is critical or not. Only non critical errors will be auto reattempted.</inlineHelpText>
        <label>Critical Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Id__c</fullName>
        <description>Market Identifier (Market__c.Market_Id__c) for the messaging.</description>
        <inlineHelpText>Market Identifier (Market__c.Market_Id__c) for the messaging.</inlineHelpText>
        <label>Market Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number for which SMS message has to be sent</description>
        <inlineHelpText>Phone number for which SMS message has to be sent</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Captures various status for a notification which is pending to be sent out.</description>
        <inlineHelpText>To reprocess a failed queue, change the status to &apos;Pending&apos;  then invoke notification queue email service.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TargetRecordId__c</fullName>
        <description>Target record id (from Lead, Contact etc) which is used to parse merge fields in email templates</description>
        <inlineHelpText>Target record id (from Lead, Contact etc) which is used to parse merge fields in email templates</inlineHelpText>
        <label>Target Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Lead__c</fullName>
        <inlineHelpText>Lead record for which the notification was sent</inlineHelpText>
        <label>Target Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Notification Queue</relationshipLabel>
        <relationshipName>Notification_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Email__c</fullName>
        <description>The email address to which email messaging will be sent out</description>
        <inlineHelpText>The email address to which email messaging will be sent out</inlineHelpText>
        <label>To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>User id which is used to parse merge fields in email templates</description>
        <inlineHelpText>User id which is used to parse merge fields in email templates</inlineHelpText>
        <label>User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Notification Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Context_Record_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Error_Reattempt__c</columns>
        <columns>TargetRecordId__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IsCriticalError__c</columns>
        <columns>GroupId__c</columns>
        <columns>Phone__c</columns>
        <columns>To_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NQ-{0000}</displayFormat>
        <label>Notification Queue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Queue</pluralLabel>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMS</fullName>
        <active>true</active>
        <label>SMS</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>